--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
 </html>
 
 <form>
+    <form name="contact" method="POST" data-netlify="true"></form>
     <input type="text" name="name" placeholder="Full Name" required>
     <input type="email" name="email" placeholder="Email Address" required>
     <input type="tel" name="phone_num" placeholder="(555)555-4000"
